<resources>
    <string name="app_name">Hikestreet</string>
    <string name="title_activity_bottam_menu">BottamMenuActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Search</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Applications</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_me">About Me</string>
    <string name="personal_information">Personal Information</string>
    <string name="add_new_documents">+ Add New Documents</string>
    <string name="documents">Documents</string>
    <string name="add_new_skills_amp_certifications"><![CDATA[+ Add New Skills & Certifications]]></string>
    <string name="skills_amp_certifications"><![CDATA[Skills & Certifications]]></string>
    <string name="add_new_education">+ Add New Education</string>
    <string name="education">Education</string>
    <string name="add_new_experience">+ Add New Experience</string>
    <string name="experience">Experience</string>
    <string name="type_here">Type here</string>
    <string name="institute">Institute*</string>
    <string name="course">Course*</string>
    <string name="start_year">START Year</string>
    <string name="end_year">End Year</string>
    <string name="currently_pursuing">Currently pursuing</string>
    <string name="school_college_name">School / College Name</string>
    <string name="degree_name">Degree Name</string>
    <string name="worked_as">Worked As*</string>
    <string name="company">Company*</string>
    <string name="i_am_currently_working_here">I am currently working here</string>
    <string name="document_type">Document Type*</string>
    <string name="preferred_job_location">Preferred Job Location</string>
    <string name="search_job_categories_here">Search Job Categories here</string>
    <string name="jobs_in">Jobs in</string>
    <string name="selected_job_category">SELECTED JOB CATEGORY</string>
    <string name="job_categories">JOB CATEGORIES</string>
    <string name="type_your_name">Type your name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="i_want_a_job">I WANT A JOB</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="welcome_to_hikestreet">Welcome to HikeStreet</string>
    <string name="improving_work_experience">Improving Work Experience</string>
    <string name="next">Next</string>
    <string name="type_your_status">Type your status</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Logged in !</string>
    <string name="signed_out">You are not logged in !</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Login</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="short_list">Short List</string>
    <string name="reject">Reject</string>
    <string name="add_usercode">Add Usercode</string>
    <string name="share_app">Share App</string>
    <string name="job_type">Job Type*</string>

</resources>
